syntax = "proto3";

package authentication.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

// Multi-Factor Authentication (MFA) service: step-by-step enrollment, challenge/verification, management of enrolled credentials and backup codes
service MFAService {
  // Query user MFA overview (whether enabled, list of enrolled methods)
  rpc GetMFAStatus(GetMFAStatusRequest) returns (GetMFAStatusResponse) {}

  // List enrolled MFA credentials (multi-device/multi-credential scenarios)
  rpc ListEnrolledMethods(ListEnrolledMethodsRequest) returns (ListEnrolledMethodsResponse) {}

  // Start enrolling an MFA method (returns challenge/secret/verification id, etc.), frontend should display or trigger the corresponding flow
  rpc StartEnrollMethod(StartEnrollMethodRequest) returns (StartEnrollMethodResponse) {}

  // Confirm enrollment (user submits verification code/assertion to complete enrollment), returns created credential id
  rpc ConfirmEnrollMethod(ConfirmEnrollMethodRequest) returns (ConfirmEnrollMethodResponse) {}

  // Disable/remove enrolled credential (can specify credential id or method)
  rpc DisableMFA(DisableMFARequest) returns (google.protobuf.Empty) {}

  // Initiate MFA challenge during login (multi-step: Start->Verify)
  rpc StartMFAChallenge(StartMFAChallengeRequest) returns (StartMFAChallengeResponse) {}

  // Verify MFA challenge during login, returns whether passed and optional session/token
  rpc VerifyMFAChallenge(VerifyMFAChallengeRequest) returns (VerifyMFAChallengeResponse) {}

  // Generate/refresh one-time backup codes (returns plaintext backup code list, caller should only display once and prompt user to save securely)
  rpc GenerateBackupCodes(GenerateBackupCodesRequest) returns (GenerateBackupCodesResponse) {}

  // List backup code metadata (does not return plaintext)
  rpc ListBackupCodes(ListBackupCodesRequest) returns (ListBackupCodesResponse) {}

  // Revoke specified credential (by id)
  rpc RevokeMFADevice(RevokeMFADeviceRequest) returns (google.protobuf.Empty) {}
}

// Multi-factor authentication method
enum MFAMethod {
  MFA_METHOD_UNSPECIFIED = 0;
  TOTP = 1;
  SMS = 2;
  EMAIL = 3;
  U2F = 4;
  WEBAUTHN = 5;
  BACKUP_CODE = 6;

  OTHER = 100;
}

// Request/response and data structures

message GetMFAStatusRequest {
  // Optional: if server identifies user through context, user_id can be omitted
  optional string user_id = 1;
}

message GetMFAStatusResponse {
  bool enabled = 1;
  repeated EnrolledMethod enrolled = 2;
  MFAEnforcement enforcement = 3;
}

enum MFAEnforcement {
  MFA_NOT_REQUIRED = 0;
  MFA_OPTIONAL = 1;
  MFA_REQUIRED = 2;
}

message EnrolledMethod {
  string id = 1;                // Credential id (internal unique identifier)
  MFAMethod method = 2;
  string display = 3;           // For display (such as masked phone number, device name)
  bool enabled = 4;
  optional google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp last_used_at = 6;
}

// List enrolled credentials
message ListEnrolledMethodsRequest {
  optional string user_id = 1;
}
message ListEnrolledMethodsResponse {
  repeated EnrolledMethod items = 1;
}

// Start enroll
message StartEnrollMethodRequest {
  MFAMethod method = 1;
  // Additional parameters may be required depending on method (e.g., SMS requires phone)
  optional string phone = 2;
  optional string email = 3;
}
message StartEnrollMethodResponse {
  // Start result for different methods
  oneof result {
    TOTPResult totp = 1;
    SMSResult sms = 2;
    WebAuthnResult webauthn = 3;
  }
  optional google.protobuf.Timestamp expires_at = 10;
  // Temporary operation id, used for ConfirmEnrollMethod / subsequent verification
  string operation_id = 11;
}

message TOTPResult {
  // base32 secret: only returned once during enrollment, server should only store hash/reference
  string secret = 1;
  string otp_auth_url = 2;
  string qr_code_data_uri = 3;
}

message SMSResult {
  string verification_id = 1;
  bool sms_sent = 2;
  string masked_phone = 3;
}

message WebAuthnResult {
  string challenge = 1;
  string options_json = 2;
  string rp_id = 3;
}

// Confirm enroll
message ConfirmEnrollMethodRequest {
  MFAMethod method = 1;
  string operation_id = 2;
  oneof credential {
    string totp_code = 10;
    SMSVerification sms = 11;
    WebAuthnAssertion webauthn = 12;
    string backup_code = 13;
  }
  // Optional: device/display name
  optional string display = 20;
}
message ConfirmEnrollMethodResponse {
  bool success = 1;
  string credential_id = 2; // Newly created credential id
}

// Disable / remove
message DisableMFARequest {
  // Specify credential id or disable all by method only
  optional string credential_id = 1;
  optional MFAMethod method = 2;
  // Verification credential: password or verification code
  oneof verifier {
    string password = 10;
    string totp_code = 11;
    SMSVerification sms = 12;
    WebAuthnAssertion webauthn = 13;
  }
  optional string reason = 20;
}

// Start authentication challenge
message StartMFAChallengeRequest {
  optional string user_id = 1;
  MFAMethod method = 2;
  optional string credential_id = 3; // Specify credential (if multi-device)
}
message StartMFAChallengeResponse {
  oneof challenge {
    SMSResult sms = 1;
    WebAuthnResult webauthn = 2;
    // TOTP does not require server challenge, frontend prompts for input directly
  }
  string operation_id = 10;
  optional google.protobuf.Timestamp expires_at = 11;
}

message VerifyMFAChallengeRequest {
  string operation_id = 1;
  oneof response {
    string totp_code = 10;
    SMSVerification sms = 11;
    WebAuthnAssertion webauthn = 12;
    string backup_code = 13;
  }
}
message VerifyMFAChallengeResponse {
  bool success = 1;
  // Optional: one-time login token or session id (implementation optional)
  optional string session_token = 2;
}

// Backup code management
message GenerateBackupCodesRequest {
  // Number to generate
  optional int32 count = 1 [(gnostic.openapi.v3.property) = { description: "Number of backup codes to generate" }];
}
message GenerateBackupCodesResponse {
  // Plaintext backup codes: only returned once, client should prompt user to save
  repeated string codes = 1;
  optional google.protobuf.Timestamp generated_at = 2;
}
message ListBackupCodesRequest {}
message ListBackupCodesResponse {
  // Only returns metadata (remaining available count), does not return plaintext
  int32 remaining = 1;
  optional google.protobuf.Timestamp generated_at = 2;
}

// Revoke device/credential
message RevokeMFADeviceRequest {
  string credential_id = 1;
}
message SMSVerification {
  string verification_id = 1;
  string code = 2;
}
message WebAuthnAssertion {
  string id = 1;
  string client_data_json = 2;
  string authenticator_data = 3;
  string signature = 4;
  optional string user_handle = 5;
}
